--- a/css/custom.css
+++ b/css/custom.css
@@ -17,6 +17,7 @@
     float: left;
     width: 50%;
     z-index: -10;
+    text-indent: 10px;
 }
 
 #right {
@@ -25,6 +26,8 @@
     float: right;
     width: 50%;
     z-index: -10;
+    text-indent: 10px;
+    direction: rtl;
 }
 
 .highlit {
